# StreamVio

./: .gitignore  README.md  add-media-folder.sh  env.example  estructura del proyecto.txt  fix-filesystem-permissions.sh  fix-permissions.sh  iniciacion-streaming-tokens.sh  install.sh  package-lock.json  package.json  resumen proyecto.txt  resumen.md  setup.sh
.github/workflows/: main.yml
StreamVio/: setup.sh
StreamVio/server/: .env.example  app.js  binding.gyp  package-lock.json  package.json  test-transcoder.js
clients/web/: .env  .gitignore  astro.config.mjs  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tsconfig.json  vitest.config.js  vitest.config.mjs
core/: CMakeLists.txt
core/include/transcoder/: transcoder.h
core/src/transcoder/: transcoder.cpp
server/: .env  app.js  binding.gyp  init.js  jest.config.js  package-lock.json  package.json  server.js
server/api/: index.js
server/config/: constants.js  database.js  enviroment.js  paths.js  settings.js
server/controllers/: authController.js  libraryController.js  metadataController.js  streamingController.js  userController.js
server/data/: db.js
server/middleware/: auth.js  authMiddleware.js  enhancedAuth.js  libraryAccess.js  streamingAuth.js
server/native/: package-lock.json  transcoder_binding.cc
server/routes/: admin.js  auth.js  filesystem.js  libraries.js  media.js  metadata.js  setup.js  streaming.js  transcoding.js  user-history.js  users.js
server/scripts/: add-streaming-tokens.js  db-init.js  initDatabase.js  initialize.js  load-test-data.js  migrate.js  test-access.js  verify-streaming.js
server/services/: authService.js  enhancedTranscoderService.js  eventBus.js  (+10 more)
(+212 files in other folders)
